# pattern_recognition_guide

./: .gitignore
met/: Makefile  tmet.tex
met/lab/image_processing/1/: aim.tex  inst-linux.tex  inst-win.tex  practice.tex  theory.tex
met/lab/image_processing/2/: aim.tex  practice.tex  theory.tex
met/lab/image_processing/3/: aim.tex  practice.tex  theory.tex
met/lab/image_processing/4/: theory.tex
met/lab/pattern_recognition/1/: aim.tex  practice.tex  theory.tex
met/lab/pattern_recognition/2/: aim.tex  practice.tex  theory.tex
met/lab/pattern_recognition/3/: aim.tex
met/various/: biblio.bib  decor.tex  soft.tex  stub.tex  title.tex
src/: CMakeLists.txt
src/image_processing/brainloller/: main.cpp
src/image_processing/morphology/: main.cpp
src/lib/: all.hpp.in  exception.hpp
src/pattern_recognition/faces/: main.cpp
src/pattern_recognition/moving_detection/: main.cpp
src/pattern_recognition/supervised/: captcha.cpp  captcha.hpp  classifier.cpp  classifier.hpp  main.cpp
src/pattern_recognition/unsupervised/: eval.cpp  gen.cpp  main.cpp  unsupervised.hpp
